--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -15,7 +15,7 @@
         </div>
       </div>
       <% end %>
-      <%#= f.input :url_ref, placeholder: '이 필드는 무슨 용도인지 모르겠습니다. ^^', input_html:{class:'span12'} %>
+      <%#= f.input :url_ref, placeholder: '이 필드는 무슨 용도인지 모르겠습니다. ^^' input_html:{class:'span12'} %>
       <%= f.input :description, input_html:{class: 'summernote span12', rows:5} %>
       <div class='row-fluid'>
         <div class="span12">
